--- a/d3/bar/style.css
+++ b/d3/bar/style.css
@@ -1,3 +1,8 @@
-body {
-  background-color: white
+.chart div {
+  font: 10px sans-serif;
+  background-color: steelblue;
+  text-align: right;
+  padding: 3px;
+  margin: 1px;
+  color: white;
 }
